c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/case_statement_string.c
// Can't use strings as labels for case statements
int main(void) {
    switch (0) {
        case "foo":
            return 1;
        default:
            return 0;
    }
}